Updating with the OwlPlug's original repository last updates:
***********************************************************************
Merge pull request #400 from DropSnorz/dependabot/github_actions/master/actions/checkout-6

build(deps): bump actions/checkout from 5 to 6

f762fb77 Arthur Poiret <contact@arthurpoiret.fr> on 21/11/2025 at 18:56
committed by GitHub <noreply@github.com>
***********************************************************************