@@ -28,103 +28,100 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 public class FileSyncTask extends AbstractTask {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(FileSyncTask.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(FileSyncTask.class);
 
-  private final FileStatRepository fileStatRepository;
+    private final FileStatRepository fileStatRepository;
 
-  private final List<String> directories;
+    private final List<String> directories;
 
-  public FileSyncTask(FileStatRepository fileStatRepository, String directoryPath) {
-    this.fileStatRepository = fileStatRepository;
-    directories = Collections.singletonList(directoryPath);
-    setName("Sync files metrics");
-  }
+    public FileSyncTask(final FileStatRepository fileStatRepository, final String directoryPath) {
+        this.fileStatRepository = fileStatRepository;
+        directories = List.of(directoryPath);
+        setName("Sync files metrics");
+    }
 
-  public FileSyncTask(FileStatRepository fileStatRepository, List<String> directories) {
-    this.fileStatRepository = fileStatRepository;
-    this.directories = directories;
-    setName("Sync files metrics");
-  }
+    public FileSyncTask(final FileStatRepository fileStatRepository, final List<String> directories) {
+        this.fileStatRepository = fileStatRepository;
+        this.directories = directories;
+        setName("Sync files metrics");
+    }
 
+    @Override
+    protected TaskResult start() throws Exception {
+        updateProgress(1, 3);
 
-  @Override
-  protected TaskResult start() throws Exception {
+        LOGGER.info("Starting file sync task on {} directories", directories.size());
 
-    this.updateProgress(1, 3);
+        long length;
+        for (final var directoryPath : directories) {
+            try {
+                LOGGER.info("Syncing file stats on directory {}", directoryPath);
+                final var directory = new File(directoryPath);
+                if (directory.exists() && directory.isDirectory()) {
+                    length = extractFolderSize(directory, null);
+                    LOGGER.info("Completed file stat sync on directory {}, computed length: {}", directoryPath, length);
+                }
 
-    LOGGER.info("Starting file sync task on {} directories", directories.size());
+            } catch (Exception e) {
+                LOGGER.error("An error occurred during file sync task execution", e);
+                throw new TaskException(e);
+            }
+        }
+        updateMessage("Plugins and files metrics synchronized.");
+        updateProgress(3, 3);
+        return completed();
+    }
 
-    long length = 0;
-    for (String directoryPath : directories) {
-      try {
-        LOGGER.info("Syncing file stats on directory {}", directoryPath);
-        File directory = new File(directoryPath);
-        if (directory.exists() && directory.isDirectory()) {
-          length = extractFolderSize(directory, null);
-          LOGGER.info("Completed file stat sync on directory {}, computed length: {}", directoryPath, length);
+    public long extractFolderSize(File directory, FileStat parent) {
+        long length = 0;
+
+        this.updateMessage("Collecting file metrics on directory: " + directory.getAbsolutePath());
+        fileStatRepository.deleteByPath(FileUtils.convertPath(directory.getAbsolutePath()));
+        // Flushing context to the database as next queries will recreate entities
+        fileStatRepository.flush();
+
+        // files can be null in the case of I/O exceptions
+        File[] subFiles = directory.listFiles();
+        if (!directory.exists() || subFiles == null) {
+            return length;
         }
 
-      } catch (Exception e) {
-        LOGGER.error("An error occurred during file sync task execution", e);
-        throw new TaskException(e);
-      }
+        FileStat directoryStat = new FileStat();
+        directoryStat.setName(directory.getName());
+        directoryStat.setPath(FileUtils.convertPath(directory.getAbsolutePath()));
+
+        if (parent != null) {
+            directoryStat.setParentPath(parent.getPath());
+            directoryStat.setParent(parent);
+        }
+        directoryStat.setLength(0);
+        fileStatRepository.saveAndFlush(directoryStat);
+
+        for (File file : subFiles) {
+            if (file.isFile()) {
+                FileStat fileStat = new FileStat();
+                fileStat.setName(file.getName());
+                fileStat.setPath(FileUtils.convertPath(file.getAbsolutePath()));
+                fileStat.setParentPath(FileUtils.convertPath(directory.getAbsolutePath()));
+                fileStat.setLength(file.length());
+                fileStat.setParent(directoryStat);
+
+                directoryStat.getChilds().add(fileStat);
+                length += fileStat.getLength();
+
+            } else if (file.isDirectory()) {
+                length += extractFolderSize(file, directoryStat);
+            }
+            // else it's probably a Mac finder alias. Ignore it.
+        }
+
+        directoryStat.setLength(length);
+        fileStatRepository.save(directoryStat);
+        return length;
+
     }
-    this.updateMessage("Plugins and files metrics synchronized.");
-    this.updateProgress(3, 3);
-    return success();
-  }
-
-  public long extractFolderSize(File directory, FileStat parent) {
-    long length = 0;
-
-    this.updateMessage("Collecting file metrics on directory: " + directory.getAbsolutePath());
-    fileStatRepository.deleteByPath(FileUtils.convertPath(directory.getAbsolutePath()));
-    // Flushing context to the database as next queries will recreate entities
-    fileStatRepository.flush();
-
-    // files can be null in case of I/O exceptions
-    File[] subFiles = directory.listFiles();
-    if (!directory.exists() || subFiles == null) {
-      return length;
-    }
-
-    FileStat directoryStat = new FileStat();
-    directoryStat.setName(directory.getName());
-    directoryStat.setPath(FileUtils.convertPath(directory.getAbsolutePath()));
-
-    if (parent != null) {
-      directoryStat.setParentPath(parent.getPath());
-      directoryStat.setParent(parent);
-    }
-    directoryStat.setLength(0);
-    fileStatRepository.saveAndFlush(directoryStat);
-
-    for (File file : subFiles) {
-      if (file.isFile()) {
-        FileStat fileStat = new FileStat();
-        fileStat.setName(file.getName());
-        fileStat.setPath(FileUtils.convertPath(file.getAbsolutePath()));
-        fileStat.setParentPath(FileUtils.convertPath(directory.getAbsolutePath()));
-        fileStat.setLength(file.length());
-        fileStat.setParent(directoryStat);
-
-        directoryStat.getChilds().add(fileStat);
-        length += fileStat.getLength();
-
-      } else if (file.isDirectory()) {
-        length += extractFolderSize(file, directoryStat);
-      }
-      // else it's probably a mac finder alias. Ignore it.
-    }
-
-    directoryStat.setLength(length);
-    fileStatRepository.save(directoryStat);
-    return length;
-
-  }
 }
